Need some more love on language

--- a/src/locales/phrases.json
+++ b/src/locales/phrases.json
@@ -1,5 +1,7 @@
 {
-        "WELCOME_HOME_PAGE" : "Welcome to the Home Page",
-        "WELCOME_BACK"      : "Welcome Back",
-        "EMAIL_OR_PHONE"    : "Email or Phone"
+        "WELCOME_HOME_PAGE"     : "Welcome to the Home Page",
+        "WELCOME_BACK"          : "Welcome Back",
+        "EMAIL_OR_PHONE"        : "Email or Phone",
+        "CONTINUE_WITH"         : "Continue with"
+
 }
