--- a/src/locales/phrases.json
+++ b/src/locales/phrases.json
@@ -2,6 +2,7 @@
         "WELCOME_HOME_PAGE"                     : "Welcome to the Home Page",
         "WELCOME_BACK"                          : "Welcome Back",
         "EMAIL_OR_PHONE"                        : "Email or Phone",
+        "EMAIL_ADDRESS"                         : "Email Address",
         "CONTINUE_WITH"                         : "Continue with",
         "REGISTER_WITH_EMAIL_ADDRESS"           : "Register with Email Address"
 }
