--- a/src/locales/errors.json
+++ b/src/locales/errors.json
@@ -1,7 +1,6 @@
 {
       "CHP000"  : "Chirp invalid or null",
       "VEP001"  : "Request was not an email address or phone number",
-
       "VEM001"  : "Email already exists in our system",      
       "VPH001"  : "Phone already exists in our system",
       "VUS001"  : "Username already exists in our system",
@@ -9,11 +8,9 @@
       "VUS003"  : "User record could not be inserted",
       "VUS004"  : "Login record could not be inserted - Email",
       "VUS005"  : "Login record could not be inserted - Phone",
-
       "VEM002"  : "Email address was not found",
       "VPH002"  : "Phone number was not found",
-      "VEP002"  : "Email address or phone number did not match password",
-
+      "VPW001"  : "Pasword mismatch",
       "TWE001"  : "Invalid Code",
       "TWE002"  : "Invalid Token",
       "TWE003"  : "Entry not found",
@@ -21,5 +18,8 @@
       "TWE005"  : "Code already used",
       "TWE006"  : "Code expired",
       "TWE007"  : "Code Verified",
-      "TWE008"  : "Unknown Error"
+      "TWE008"  : "Unknown Error",
+      "JWTEXP"  : "Login token has expired. Please re-login",
+      "JWTLVL"  : "This area is not accessible to your level of access",
+      "SUCL01"  : "Login was successful. Redirecting..."
 }
