Lets get the upload and clusters going

--- a/src/locales/errors.json
+++ b/src/locales/errors.json
@@ -1,25 +1,31 @@
 {
-      "CHP000"  : "Chirp invalid or null",
-      "VEP001"  : "Request was not an email address or phone number",
-      "VEM001"  : "Email already exists in our system",      
-      "VPH001"  : "Phone already exists in our system",
-      "VUS001"  : "Username already exists in our system",
-      "VUS002"  : "Username could not be generated",
-      "VUS003"  : "User record could not be inserted",
-      "VUS004"  : "Login record could not be inserted - Email",
-      "VUS005"  : "Login record could not be inserted - Phone",
-      "VEM002"  : "Email address was not found",
-      "VPH002"  : "Phone number was not found",
-      "VPW001"  : "Pasword mismatch",
-      "TWE001"  : "Invalid Code",
-      "TWE002"  : "Invalid Token",
-      "TWE003"  : "Entry not found",
-      "TWE004"  : "Too many attempts",
-      "TWE005"  : "Code already used",
-      "TWE006"  : "Code expired",
-      "TWE007"  : "Code Verified",
-      "TWE008"  : "Unknown Error",
-      "JWTEXP"  : "Login token has expired. Please re-login",
-      "JWTLVL"  : "This area is not accessible to your level of access",
-      "SUCL01"  : "Login was successful. Redirecting..."
+"CHP000"  : "Chirp invalid or null",      
+"VEP001"  : "Request was not an email address or phone number",
+"VEM001"  : "Email already exists in our system",      
+"VPH001"  : "Phone already exists in our system",      
+"VUS001"  : "Username already exists in our system",
+"VUS002"  : "Username could not be generated",
+"VUS003"  : "User record could not be inserted",
+"VUS004"  : "Login record could not be inserted - Email",
+"VUS005"  : "Login record could not be inserted - Phone",
+"VUN000"  : "Username too short",
+"VUN001"  : "Username invalid, no special characters or spaces allowed",
+"VUN002"  : "User ID was not found",
+"VUN003"  : "Username already in use",
+"VUN004"  : "Username contains a word that is not allowed",
+"VUN005"  : "Username contains an offensive word",            
+"VEM002"  : "Email address was not found",
+"VPH002"  : "Phone number was not found",
+"VPW001"  : "Pasword mismatch",
+"TWE001"  : "Invalid Code",
+"TWE002"  : "Invalid Token",
+"TWE003"  : "Entry not found",
+"TWE004"  : "Too many attempts",
+"TWE005"  : "Code already used",
+"TWE006"  : "Code expired",
+"TWE007"  : "Code Verified",
+"TWE008"  : "Unknown Error",
+"JWTEXP"  : "Login token has expired. Please re-login",
+"JWTLVL"  : "This area is not accessible to your level of access",
+"SUCL01"  : "Login was successful. Redirecting..."
 }
