--- a/src/locales/words.json
+++ b/src/locales/words.json
@@ -1,26 +1,27 @@
 {
-        "ABOUT"    : "about",
-        "ACCOUNT"  : "account",
-        "ACTIVITY" : "activity",
-        "BLOG"     : "blog",
-        "BLOGS"    : "blogs",
-        "CALENDAR" : "calendar",
-        "CHAT"     : "chat",
-        "EVENTS"   : "events",
-        "FEED"     : "feed",
-        "FORUM"    : "forum",
-        "GALLERY"  : "gallery",
-        "GENDER"   : "gender", 
-        "GROUPS"   : "groups",
-        "HOME"     : "home",
-        "LOGOUT"   : "logout",
-        "LOCATIONS": "locations",
-        "LOGIN"    : "login",
-        "OR"       : "or",
-        "PASSWORD" : "password",
-        "REGISTER" : "register",
-        "SIGNUP"   : "signup",
-        "SEARCH"   : "search",
-        "USERNAME" : "username",
-        "VERIFY"   : "verify"
+"ABOUT"    : "about",
+"ACCOUNT"  : "account",
+"ACTIVITY" : "activity",
+"BLOG"     : "blog",
+"BLOGS"    : "blogs",
+"CALENDAR" : "calendar",
+"CHAT"     : "chat",
+"EVENTS"   : "events",
+"FEED"     : "feed",
+"FORUM"    : "forum",
+"GALLERY"  : "gallery",
+"GENDER"   : "gender", 
+"GROUPS"   : "groups",
+"HOME"     : "home",
+"LOGOUT"   : "logout",
+"LOCATIONS": "locations",
+"LOGIN"    : "login",
+"OR"       : "or",
+"PASSWORD" : "password",
+"REGISTER" : "register",
+"SIGNUP"   : "signup",
+"SEARCH"   : "search",
+"UPDATE"   : "update",
+"USERNAME" : "username",
+"VERIFY"   : "verify"
 }
