--- a/src/locales/words.json
+++ b/src/locales/words.json
@@ -21,6 +21,7 @@
 "REGISTER" : "register",
 "SIGNUP"   : "signup",
 "SEARCH"   : "search",
+"UPLOAD"   : "upload",
 "UPDATE"   : "update",
 "USERNAME" : "username",
 "VERIFY"   : "verify",
