--- a/src/locales/phrases.json
+++ b/src/locales/phrases.json
@@ -1,6 +1,7 @@
 {
 "CONTINUE_WITH"                         : "Continue with",
-"DOB"                                   : "Date of Birth",        
+"DOB"                                   : "Date of Birth",     
+"DOB_ERROR"                             : "Age must be over",   
 "EMAIL_OR_PHONE"                        : "Email or Phone",
 "EMAIL_ADDRESS"                         : "Email Address",
 "FINISH_YOUR_PROFILE"                   : "Finish Your Profile",   
@@ -11,6 +12,8 @@
 "MEDIA_DISCLAIMER"                      : "All content moderated. Please abide by all site rules and regulations",
 "MEDIA_UPLOADED_SUCCESSFULLY"           : "Media uploaded successfully",
 "MEDIA_UPLOAD_FAILED"                   : "Media upload failed", 
+"PASSWORD_MATCH_ERROR"                  : "Passwords must be minimum security",
+"PASSWORD_MATCH_OK"                     : "Password is valid", 
 "PLEASE_CORRECT_THE_FORM_ERRORS"        : "Please correct the form errors",
 "REGISTER_WITH_EMAIL_ADDRESS"           : "Register with Email Address",
 "REMOVE_CURRENT_PHOTO"                  : "Remove Current Photo",
