--- a/src/locales/phrases.json
+++ b/src/locales/phrases.json
@@ -1,10 +1,12 @@
 {
 "CONTINUE_WITH"                         : "Continue with",
+"CODE_SENT"                             : "A verififcation code has been sent.",
 "DOB"                                   : "Date of Birth",     
 "DOB_ERROR"                             : "Age must be over",   
 "EMAIL_OR_PHONE"                        : "Email or Phone",
 "EMAIL_ADDRESS"                         : "Email Address",
 "FINISH_YOUR_PROFILE"                   : "Finish Your Profile",   
+"FORGOT_YOUR_PASSWORD"                  : "Forgot Your Password",
 "ENTER_VERIFICATION_CODE"               : "Enter Verification Code", 
 "INVALID_IMAGE"                         : "Invalid Image Uploaded",
 "LOGIN_WITH"                            : "Login with",       
@@ -17,12 +19,14 @@
 "PLEASE_CORRECT_THE_FORM_ERRORS"        : "Please correct the form errors",
 "REGISTER_WITH_EMAIL_ADDRESS"           : "Register with Email Address",
 "REMOVE_CURRENT_PHOTO"                  : "Remove Current Photo",
+"REMIND_ME"                             : "Remind Me",
 "TAKE_A_PHOTO"                          : "Take a Photo",
 "VERIFICATION_CODE"                     : "Verification Code",
 "WELCOME_BACK"                          : "Welcome Back",
 "WELCOME_HOME_PAGE"                     : "Welcome to the Home Page",
 "UPLOAD_COVER"                          : "Upload Cover",
 "UPLOAD_A_PHOTO"                        : "Upload a Photo",
+"VERIFICATION_SUCCESS"                  : "Verification Successful. Please wait..",
 "YOUR_ACCOUNT_HAS_BEEN_CREATED"         : "Your account has been created. Please check your email/phone for a verification code.",
 "YOUR_ACCOUNT_HAS_BEEN_VERIFIED"        : "Your account has been verified."
 }
