--- a/src/locales/phrases.json
+++ b/src/locales/phrases.json
@@ -16,8 +16,10 @@
 "MEDIA_UPLOAD_FAILED"                   : "Media upload failed", 
 "PASSWORD_MATCH_ERROR"                  : "Passwords must be minimum security",
 "PASSWORD_MATCH_OK"                     : "Password is valid", 
+"PASSWORD_RESET_SUCCESS"                : "Password reset successful",
 "PLEASE_CORRECT_THE_FORM_ERRORS"        : "Please correct the form errors",
 "REGISTER_WITH_EMAIL_ADDRESS"           : "Register with Email Address",
+"RESET_YOUR_PASSWORD"                   : "Reset Your Password",
 "REMOVE_CURRENT_PHOTO"                  : "Remove Current Photo",
 "REMIND_ME"                             : "Remind Me",
 "TAKE_A_PHOTO"                          : "Take a Photo",
